# oxidium-forge-core

./: .gitignore  Cargo.toml  README.md
config/: oxidium-forge.toml
crates/forge-api/: Cargo.toml
crates/forge-api/src/: definitions.rs  deployments.rs  health.rs  incidents.rs  instances.rs  jobs.rs  lib.rs  manual_tasks.rs  router.rs  state.rs
crates/forge-api/tests/: it_manual_task.rs  it_service_task.rs
crates/forge-bpmn/: Cargo.toml
crates/forge-bpmn/src/: compile.rs  error.rs  graph.rs  lib.rs  model.rs  parse.rs  validate.rs
crates/forge-bpmn/tests/: it_parse.rs
crates/forge-bpmn/tests/fixtures/: exclusive-gateway.bpmn  gateway-flow.bpmn  gateway-no-default.bpmn  simple-manual-task.bpmn  simple-service-task.bpmn
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: client.rs  ensure.rs  main.rs
crates/forge-cli/src/commands/: daemon.rs  definitions.rs  deploy.rs  health.rs  incidents.rs  instance.rs  jobs.rs  manual_task.rs  mod.rs
crates/forge-engine/: Cargo.toml
crates/forge-engine/src/: deployment.rs  error.rs  incidents.rs  instance.rs  jobs.rs  lib.rs  manual_tasks.rs  mapping.rs
crates/forge-engine/src/engine/: archive.rs  mod.rs  run.rs  step.rs
crates/forge-engine/src/expr/: eval.rs  lexer.rs  mod.rs  parser.rs
crates/forge-engine/src/handlers/: events.rs  gateway.rs  manual_task.rs  mod.rs  service_task.rs
crates/forge-engine/tests/: it_deploy.rs  it_gateway_flow.rs
crates/forge-model/: Cargo.toml
crates/forge-model/src/: config.rs  error.rs  lib.rs
crates/forge-store/: Cargo.toml
crates/forge-store/src/: definitions.rs  events.rs  history.rs  incidents.rs  jobs.rs  lib.rs  manual_tasks.rs  migrate.rs  pool.rs  runtime.rs  variables.rs
crates/forged/: Cargo.toml
crates/forged/src/: lifecycle.rs  logging.rs  main.rs  shutdown.rs
migrations/: 0001_system.sql  0002_process_definitions.sql  0003_runtime_core.sql  0004_variables.sql  0005_process_events.sql  0006_jobs_incidents.sql  0007_manual_tasks.sql
