[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
toml = "0.8"
directories = "5"
which = "6"
