[package]
name = "forge-bpmn"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-model = { path = "../forge-model" }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
