[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-model = { path = "../forge-model" }
clap = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
which = "6"
