[package]
name = "forge-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-model = { path = "../forge-model" }
forge-store = { path = "../forge-store" }
forge-bpmn = { path = "../forge-bpmn" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"
