[package]
name = "forge-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
