[package]
name = "forged"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forged"
path = "src/main.rs"

[dependencies]
forge-model = { path = "../forge-model" }
forge-store = { path = "../forge-store" }
forge-bpmn = { path = "../forge-bpmn" }
forge-engine = { path = "../forge-engine" }
forge-api = { path = "../forge-api" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
